2002-01-18  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (ScanSourceFile): patch from Matthias Clasen
	<matthiasc@poet.de> to only strip first space after '*' in source
	code comment blocks, so example code can be indented as desired.
	Bug #68216.

Wed Nov 21 16:50:35 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb,tmpl.in: Add some extra quoting to
	error messages to make it clearer what is going on
	with trailing commas on enumeration declarations.

Wed Nov 21 16:00:45 2001  Owen Taylor  <otaylor@redhat.com>

	* Applied patch from Matthias Clasen to use a modified
	.dcl file with the 44 character name length limit removed.
	(#61342)

2001-10-17  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in: applied patch from Matthias Clasen
	<matthiasc@poet.de> to take a --sgml-mode argument which means
	all comment blocks in the source code are assumed to be DocBook
	(i.e. we don't convert '<', '>' and '&' to '&lt;' etc.

2001-10-09  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputMissingDocumentation): changed %.2f to %.0f
	so hopefully the automated reports on developer.gnome.org will work
	OK again.

2001-10-02  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): applied patch from
	matthiasc@poet.de (Matthias Clasen) to handle G_CONST_RETURN in a
	parameter list. Bug #61341.

2001-10-02  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputMissingDocumentation): applied patch from
	matthiasc@poet.de (Matthias Clasen) to output percentages better.
	Bug #61467.
	Also set percent to 100 if total is 0, avoiding divide-by-zero.

2001-10-02  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am (DOC_OVERRIDES): define as an empty string,
	even when not used.

2001-09-13  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputMissingDocumentation): initialize buffer to "".
	Fix for SGI from David Kaelbling <drk@sgi.com>.
